<?xml version="1.0"?>
<package>
  <name>jsk_planning</name>
  <version>0.1.10</version>
  <description>
   <p>Metapackage that contains planning package for jsk-ros-pkg</p>
  </description>

  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <author email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</author>
  <author email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</author>
  <author email="youhei@jsk.imi.i.u-tokyo.ac.jp">Youhei Kakiuchi</author>

  <license>BSD</license>
  <url type="website">http://ros.org/wiki/jsk_planning</url>
  <url type="repository">https://github.com/jsk-ros-pkg/jsk_planning</url>
  <url type="bugtracker">https://github.com/jsk-ros-pkg/jsk_planning/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>pddl_msgs</run_depend>
  <run_depend>pddl_planner</run_depend>
  <run_depend>pddl_planner_viewer</run_depend>
  <run_depend>task_compiler</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
