<package>
  <name>pddl_planner_viewer</name>
  <version>0.1.10</version>
  <description>a viewer of pddl_planner.</description>

  <maintainer email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</maintainer>
  <maintainer email="youhei@jsk.t.u-tokyo.ac.jp">Yohei Kakiuchi</maintainer>
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <maintainer email="furushchev@jsk.imi.i.u-tokyo.ac.jp">Yuki Furuta</maintainer>

  <license>Apache License 2.0</license>

  <url type="website"></url>
  <!-- <url type="bugtracker"></url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <author>Ryohei Ueda (ueda@jsk.t.u-tokyo.ac.jp)</author>

  <build_depend>pddl_planner</build_depend>

  <run_depend>pddl_planner</run_depend>

  <export>

  </export>
</package>
